--- a/syllabus/STAT446-646-Intro-to-Bayesian-Statistics-syllabus-SP21.Rmd
+++ b/syllabus/STAT446-646-Intro-to-Bayesian-Statistics-syllabus-SP21.Rmd
@@ -45,9 +45,7 @@ advdate <- function(obj, adv) {
 
 ## Course Description
 
-This course introduces Bayesian statistics to a technical audience. Early on, we focus on the logic behind Bayesian statistics, including the mathematical formalization of updating beliefs under uncertainty. Then we describe Bayesian methods for well-known probability models and compare these methods to classical (frequentist) alternatives. Topics include Bayes' Theorem, prior specification, Bayesian inference for discrete and continuous univariate random variables, and linear regression. We'll implement methods analytically and using software such as Minitab, R, and Stan.
-
-The latter portions of the course focus on implementing more advanced Bayesian methods through modern computational techniques to sample posterior distributions including Markov Chain Monte Carlo (MCMC) and Hamiltonian Monte Carlo (HMC). The aim will be to provide the concepts and technical skills to conduct a realistic Bayesian data analysis. 
+This course introduces Bayesian statistics to a technical audience. Early on, we focus on the logic behind Bayesian statistics, including the mathematical formalization of updating beliefs under uncertainty. Then we describe Bayesian methods for well-known probability models and compare these methods to classical (frequentist) alternatives. Topics include Bayes' Theorem, prior specification, Bayesian inference for discrete and continuous univariate random variables, and linear regression. We'll implement methods analytically and using software such as Minitab, `R`, and `Stan`.
 
 *Instructor's role*
 
@@ -82,7 +80,7 @@ Upon successful completion of the course, students will be able to
 
 In addition to the above 400-level outcomes, graduate students will be able to 
 
-* synthesize course concepts to apply Bayesian modeling techniques to real-world data.
+* synthesize course concepts in an application of Bayesian modeling to real-world data.
 
 ## Textbooks & Course Materials
 
@@ -98,7 +96,7 @@ Modern best practices for coding and reporting `R` analyses:
 *R for data science: import, tidy, transform, visualize, and model data*, Hadley WICKHAM and Garrett GROLEMUND.
 [Online textbook](https://r4ds.had.co.nz/)
 
-More Bayesian intuition and applied problems:  
+Excellent Introduction to applied Bayesian modeling motivated by information theory:
 *Statistical Rethinking*, 2nd edition, Richard MCELREATH
 [Textbook website](https://xcelab.net/rm/statistical-rethinking/)
 
@@ -114,6 +112,11 @@ https://education.rstudio.com/learn/intermediate/
 
 https://education.rstudio.com/learn/expert/
 
+## WebCampus/Canvas
+
+WebCampus/Canvas will be used for the majority of class business. Students are responsible for monitoring Announcements, Assignments/Due Dates, Course Files, and the Gradebook. The preferred mode of commuication for course-related discussion with the instructor is through Canvas messaging.
+
+https://unr.instructure.com/login/canvas
 
 # Attendance
 
@@ -139,35 +142,48 @@ Exams will be released roughly a week to before the due date. You must complete 
 
 ## Makeup, Late Policy
 
-* Problem sets solutions and completed exams are due on Fridays.
+* Completed problem sets exams are due on Fridays.
 * Late assignments/exams will be given a 20% penalty per business day received late. (i.e., Saturday -0%, Sunday -0%, Monday -20% , Tuesday -40%, ..., Friday -100%).
 * Exceptions will be made when a student misses work due to a documented (doctor's note) illness or an extraordinary situation (up to the discretion of the instructor). 
 * There will be no early or make-up exams. 
-* If you need to miss an exam due to participation in a religious holiday or an official university activities (including athletics and other sanctioned activities), you must make arrangements with the instructor at least two weeks prior to the exam in question. 
+* If you need to miss an exam due to participation in a religious holiday or an official university activities (including athletics and other sanctioned activities), please make arrangements with the instructor at least two weeks prior to the exam in question. 
 
 **I'll drop (trim) your 2 lowest grades in the "Problem Set" category to protect against 1-2 outlying points having too much weight (e.g., a 0).**
 
 # Grading
 
-The course has a weighted grading scheme. There are three categories of assignments. Table 1 shows the percentages for each category and the number of assignments (n).
+The course has a weighted grading scheme. There are three categories of assignments for 446 students. Table 1 shows the percentages for each category and the number of assignments (n). Table 2 gives the similar table for 646 students with the addition of a "Project" category. Table 3 displays the percentage thresholds determining the final overall letter grade.
 
 | Assignment | n  | %  |
 |------------|----|----|
 | Problem set  | 14 | 55 |
 | Midterm    | 3  | 30 |
 | Final Exam | 1  | 15 |
+Table: Table 1. 446 grading scheme.
 
-Table 2 displays the letter grade conversion for the total score from Table 1.
+| Assignment | n  | %  |
+|------------|----|----|
+| Problem set  | 14 | 50 |
+| Midterm    | 3  | 15 |
+| Final Exam | 1  | 15 |
+| Project | 1  | 20 |
+Table: Table 2. 646 grading scheme.
 
 | Letter grade | % Range      |
 |--------------|--------------|
 | A            | 89.9 - up    |
-| B            | 79.9 - 89.8  |
-| C            | 69.9 - 79.8  |
-| D            | 59.9 - 69.8  |
+| A-            | 87.9 - 89.8    |
+| B+            | 84.9 - 87.8  |
+| B            | 79.9 - 84.8  |
+| B-            | 77.9 - 79.8  |
+| C+            | 74.9 - 77.8  |
+| C            | 69.9 - 74.8  |
+| C-            | 67.9 - 69.8  |
+| D            | 59.9 - 67.8  |
 | F            | below - 59.8 |
+Table: Table 3. Percentage range to letter grade conversion. 
 
-The instructor reserves the right to deviate from the above thresholds, including assigning $+$ or $-$.
+*The instructor reserves the right to deviate from Table 3.*
 
 # Additional statements
 
@@ -179,7 +195,7 @@ The University of Nevada, Reno is committed to providing a safe learning and wor
 Any student with a disability needing academic adjustments or accommodations is requested to speak with the [http:www.unr.edu/drc](Disability Resource Center) as soon as possible to arrange for appropriate accommodations.
 
 ## Academic Conduct
-No laptops, cell phones, mp3 players, or other electronics are to be used for personal reasons in class. If you are being disruptive during class you will be asked to leave. Disruptions in this context include inadequate participation. You must come to class on time and stay until the end of lecture. Tardy students will not be admitted to class. Please visit [http:www.unr.edu/student-conduct](http:www.unr.edu/student-conduct) for our official student code of conduct.
+Please be professional. Prepare for and engage in class. Be on time and submit timely work. Please visit [http:www.unr.edu/student-conduct](http:www.unr.edu/student-conduct) for our official student code of conduct.
 
 ## Academic Success Services
 Your student fees cover usage of the University Math Center, University Tutoring Center, and University Writing Center. These centers support your classroom learning; it is your responsibility to take advantage of their services. Keep in mind that seeking help outside of class is the sign of a responsible and successful student.
@@ -189,6 +205,38 @@ Surreptitious or covert videotaping of class or unauthorized audio recording of 
 
 ## Academic Dishonesty
 Cheating, plagiarism, or otherwise obtaining grades under false pretenses constitutes academic dishonesty according to the code of this university. Academic dishonesty will not be tolerated and penalties can include canceling a student’s enrollment without a grade or giving an F for the assignment or for the entire course. See the University Academic Standards policy: [UAM 6,502](https://www.unr.edu/administrative-manual/6000-6999-curricula-teaching-research/instruction-research-procedures/6502-academic-standards).
+
+## Statement on content accessibility:
+
+This course may leverage 3rd party web/multimedia content, if you experience any issues accessing this content, please notify your instructor.
+
+## Statement on COVID-19 Training Policies
+
+Students must complete and follow all guidelines as stated in the Student COVID-19 Training modules, or any other trainings or directives provided by the University.
+
+## Statement on COVID-19 Face Coverings:
+
+In response to COVID-19, and in alignment with State of Nevada Governor Executive Orders, Roadmap to Recovery for Nevada plans, Nevada System of Higher Education directives, the University of Nevada President directives, and local, state, and national health official guidelines face coverings are required at all times while on campus, except when alone in a private office. This includes the classroom, laboratory, studio, creative space, or any type of in-person instructional activity, and public spaces.
+
+A “face covering” is defined as a “covering that fully covers a person’s nose and mouth, including without limitation, cloth face mask, surgical mask, towels, scarves, and bandanas” (State of Nevada Emergency Directive 024).
+
+Students that cannot wear a face covering due to a medical condition or disability, or who are unable to remove a mask without assistance may seek an accommodation through the Disability Resource Center.
+
+## Statement on COVID-19 Social Distancing:
+
+Face coverings are not a substitute for social distancing. Students shall observe current social distancing guidelines where possible in accordance with the Phase we are in while in the classroom, laboratory, studio, creative space (hereafter referred to as instructional space) setting and in public spaces. Students should avoid congregating around instructional space entrances before or after class sessions. If the instructional space has designated entrance and exit doors students are required to use them. Students should exit the instructional space immediately after the end of instruction to help ensure social distancing and allow for the persons attending the next scheduled class session to enter.
+
+## Statement on COVID-19 Disinfecting Your Learning Space:
+
+Disinfecting supplies are provided for you to disinfect your learning space. You may also use your own disinfecting supplies.
+
+## Statement on COVID-19, COVID-19 Like Symptoms, and Contact with Someone Testing Positive for COVID-19:
+
+Students must conduct daily health checks in accordance with CDC guidelines. Students testing positive for COVID 19, exhibiting COVID 19 symptoms or who have been in direct contact with someone testing positive for COVID 19 will not be allowed to attend in-person instructional activities and must leave the venue immediately. Students should contact the Student Health Center or their health care provider to receive care and who can provide the latest direction on quarantine and self-isolation. Contact your instructor immediately to make instructional and learning arrangements.
+
+## Statement on Failure to Comply with Policy (including as outlined in this Syllabus) or Directives of a University Employee
+
+In accordance with section 6,502 of the University Administrative Manual, a student may receive academic and disciplinary sanctions for failure to comply with policy, including this syllabus, for failure to comply with the directions of a University Official, for disruptive behavior in the classroom, or any other prohibited action. “Disruptive behavior" is defined in part as behavior, including but not limited to failure to follow course, laboratory or safety rules, or endangering the health of others. A student may be dropped from class at any time for misconduct or disruptive behavior in the classroom upon recommendation of the instructor and with approval of the college dean. A student may also receive disciplinary sanctions through the Office of Student Conduct for misconduct or disruptive behavior, including endangering the health of others, in the classroom. The student shall not receive a refund for course fees or tuition.
 
 # Tentative course schedule
 
@@ -235,7 +283,7 @@ Class readings and assignments are subject to change, contingent on mitigating c
 *Monday topic*: President's Day. No class.  
 *Wednesday topic*: Ch. 6 Bayesian inference for discrete RVs
 
-<div class="week">`r advdate(mon, 5)`: Ch. 7-8 Continuous RVs and Bayesian inference for binomial proportion </div>
+<div class="week">`r advdate(mon, 5)`: Ch. 7-8 Continuous RVs and Bayesian inference for binomial proportion $\pi$ </div>
 
 - Readings: Bolstad Ch. 7-8.
 - Practice: Please complete Problem Set 5 and submit in Canvas by the end of the week.
@@ -273,7 +321,7 @@ Class readings and assignments are subject to change, contingent on mitigating c
 - Notes: None.
 
 *Monday topic*: Ch. 11 Bayes inference for normal mean $\mu$  
-*Wednesday topic*: Ch. 12 Comparing Bayes/Frequentist inference for $\mu
+*Wednesday topic*: Ch. 12 Comparing Bayes/Frequentist inference for $\mu$
 
 <div class="week">`r advdate(mon, 9)`:  Ch. 13 Bayesian inference for difference between normal means  </div>
 
@@ -340,7 +388,7 @@ Class readings and assignments are subject to change, contingent on mitigating c
 - Readings: Bolstad Ch. 20.
 - Practice: None.
 - Exams: Final exam due Friday 7 May 2021.
-- Notes: Matrix (linear) algebra required.
+- Notes: None.
 
 *Monday topic*: Ch. 20 Computational Bayes including Markov Chain Monte Carlo (MCMC).  
 *Wednesday topic*: Prep Day. No class.
